--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,23 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-**/.idea
-
-**/.gradle
-**/backend/build
-!**/gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### IntelliJ IDEA ###
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-
 
 # dependencies
-**/node_modules
+/node_modules
 /.pnp
 .pnp.js
 
@@ -25,7 +9,7 @@ out/
 /coverage
 
 # production
-**/build
+/build
 
 # misc
 .DS_Store
