--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -25,8 +25,14 @@ application {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.1.1'
+	implementation 'redis.clients:jedis:4.4.3'
+
+	//developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
